
[package]
name = "sort_rust"
authors = ["keienwang <keienwang1024@gmail.com>"]
version = "0.1.0"
description = "sort for Rust"
documentation = "https://github.com/keienwang/sort_rust"
edition = "2021"
homepage = "https://github.com/keienwang/sort_rust"
keywords = ["science", "mathematics", "ai", "hpc"]
license = "Apache-2.0"
publish = true

readme = "README.md"

repository = "https://github.com/keienwang/sort_rust"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

